--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.7.0",
     "path": "^0.12.7",
     "xmlhttprequest": "^1.8.0"
   }
