--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.7.0",
+    "nodemon": "^2.0.14",
     "path": "^0.12.7",
+    "validator": "^13.6.0",
     "xmlhttprequest": "^1.8.0"
   }
 }
